Stash current work

--- a/assets/style.css
+++ b/assets/style.css
@@ -12,12 +12,12 @@ aside {
 }
 
 #next-block {
-  background: #010538;
+  background: #f5f7ff;
   margin: 20px auto;
 }
 
 #board {
-  background: #010538;
+  background: #f5f7ff;
   margin: 20px auto;
 }
 
